--- a/www/html/downphotos/public/css/usuario.css
+++ b/www/html/downphotos/public/css/usuario.css
@@ -811,7 +811,8 @@ form > div > button:hover{
    background: black;
 }
 
-.col-md-6.login-left.wow.fadeInLeft > a:nth-child(4){
+#yourModal > div > div > div > div > div > div > form > div > a{
+margin-top:0px;
 background: #13c6f1;
 color: #FFF;
 border-color: transparent;
@@ -820,33 +821,14 @@ border: none;
 font-family: inherit;
 font-size: inherit;
 line-height: inherit;
-margin-top: 311px;
 left: 0px;
 position: absolute;
 
 }
-.col-md-6.login-left.wow.fadeInLeft > a:nth-child(4):hover{
-   background: black;
-}
 
-.col-md-6.login-left.wow.fadeInLeft > a:nth-child(5){
-background: #13c6f1;
-color: #FFF;
-border-color: transparent;
-padding: 0.4em 1.5em;
-border: none;
-font-family: inherit;
-font-size: inherit;
-line-height: inherit;
-margin-top: 311px;
-left: 100px;
-position: absolute;
-
+#yourModal > div > div > div > div > div > div > form > div > a:hover{
+background: black;
 }
-.col-md-6.login-left.wow.fadeInLeft > a:nth-child(5):hover{
-   background: black;
-}
-
 #fix-descricao > div > div > p{
     margin-left:50px;
 }
