--- a/www/html/downphotos/public/css/app.css
+++ b/www/html/downphotos/public/css/app.css
@@ -20,31 +20,12 @@ ul,label{
 body a:hover{
   text-decoration:none;
 }
-
-.content_top {
-  padding: 15px 20px;
-  border: 1px solid #13c6f1;
-  border-radius: 3px;
-  background: #13c6f1;
-}
-
-.heading h3 {
-  font-size: 1.6em;
-  color: #fff;
-  text-transform: uppercase;
-  margin: 0;
-}
 /*----*/
 /* start icon styles */
 *html .icon1 li a:hover { /* IE6 only */
   color: #fafafa;
 }
 /* Mobile */
-span.actual{
-  color:#92d3d0;
-  font-size:13px;
-  font-weight:600;
-}
 
 /*-- header --*/
 
@@ -89,63 +70,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', end
   float: right;
 }
 /*-- social-icons --*/
-.w3l_header_right ul li {
-        display: inline-block;
-    float: left;
-    margin: 0px 6px;
-    width:26px;
-    height:26px;
-    text-align: center;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-    background: #2654b5;
-  border: 2px solid #2654b5;
-}
-.w3l_header_right ul li:nth-child(2) {
-   background: #1da1f2;
-  border: 2px solid #1da1f2;
-}
-.w3l_header_right ul li:nth-child(3) {
-   background: #ea3b26;
-  border: 2px solid #ea3b26;
-}
-.w3l_header_right ul li:nth-child(4) {
-  background: #0177b5;
-  border: 2px solid #0177b5;
-}
-.w3l_header_right ul {
-    margin-top: 7px;
-}
-.w3l_header_right ul li i {
-    padding-top: 5px;
-    color: #fff;
-    font-size: 12px;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    vertical-align: top;
-}
-.w3l_header_right ul li:hover i{
-  
-   transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
-.w3l_header_right ul li:hover { 
-    border: 2px solid #0066b2;
-   background: #0066b2;
-   transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
 /*-- //social-icons --*/
 
 /*-- //nav-effect --*/
@@ -493,48 +417,7 @@ ul.about-agile li i {
 #flexiselDemo1 {
   display: none;
 }
-.nbs-flexisel-container {
-  position: relative;
-  max-width: 100%;
-}
-.nbs-flexisel-ul {
-  position: relative;
-  width: 9999px;
-  margin: 0px;
-  padding: 0px;
-  list-style-type: none;
-  text-align: center;
-}
-.nbs-flexisel-inner {
-  overflow: hidden;
-  margin: 0px auto;
-}
-.nbs-flexisel-item {
-
-  float: left;
-  margin: 0;
-  padding: 0px;
-  position: relative;
-  line-height: 0px;
-}
 /*---- Nav ---*/
-.nbs-flexisel-nav-left, .nbs-flexisel-nav-right {
-  width:60px;
-  height:115px;
-  position: absolute;
-  cursor: pointer;
-  z-index: 100;
-}
-.nbs-flexisel-nav-left {
-  left:0%;
-  top: 15% !important;
-  display:none;
-  }
-.nbs-flexisel-nav-right {
-  right: 0%;
-  top: 15% !important;
-  display:none;
-  }
 /*--//flexisel--*/
 /*--/agileits_works--*/
 
@@ -737,41 +620,8 @@ h3.agile-tittle.two.gal {
   opacity: 0.8;
 }
 
-.grid figure figcaption {
-  padding: 2em;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.25em;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.grid figure figcaption::before,
-.grid figure figcaption::after {
-  pointer-events: none;
-}
-
-.grid figure figcaption {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
-
-.grid figure p {
-  margin: 0;
-}
-
-.grid figure p {
-      letter-spacing: 3px;
-    font-size: 68.5%;
-    text-transform: lowercase;
-    text-transform: capitalize;
-}
 /*---------------*/
 /***** Roxy *****/
 /*---------------*/
@@ -790,47 +640,10 @@ figure.effect-roxy img {
   transform: translate3d(-50px,0,0);
 }
 
-figure.effect-roxy figcaption::before {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  bottom: 30px;
-  left: 30px;
-  border: 1px solid #fff;
-  content: '';
-  opacity: 0;
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-20px,0,0);
-  transform: translate3d(-20px,0,0);
-}
-
-figure.effect-roxy figcaption {
-    padding: 5em 2em;
-    text-align: center;
-}
-
-figure.effect-roxy p {
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(-10px,0,0);
-    transform: translate3d(-10px,0,0);
-    line-height: 1.8em;
-}
-
 figure.effect-roxy:hover img {
   opacity: 0.5;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
-}
-
-figure.effect-roxy:hover figcaption::before,
-figure.effect-roxy:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
-    line-height: 1.8em;
 }
 /*-- //gallery --*/
 .collapsed span {
@@ -842,66 +655,6 @@ figure.effect-roxy:hover p {
 .footer{
     background: #171616;
   padding:4em 0;
-}
-.w3agile_footer_grid h3{
-    font-size: 1.2em;
-    color: #fff;
-    margin-bottom: 1em;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.w3agile_footer_grid{
-  color:#999;
-  line-height:2em;
-}
-.w3agile_footer_grid h2{
-  margin:1em 0 0;
-}
-.w3agile_footer_grid h2 a{
-  font-size: 1em;
-    color: #168eea;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-.w3agile_footer_grid ul li{
-  list-style-type:none;
-  margin-bottom:1em;
-}
-.w3agile_footer_grid ul li a{
-    color: #999;
-    text-decoration: none;
-    font-size: 0.9em;
-}
-.w3agile_footer_grid ul li a:hover{
-      color: #ee4f4f;
-}
-
-.w3agile_footer_grid:nth-child(3) {
-    padding-left: 3em;
-}
-.w3agile_footer_grid:nth-child(4) {
-    padding-left: 3em;
-}
-ul.w3agile_footer_grid_list li{
-  list-style-type:none;
-  color:#999;
-  line-height:1.9em;
-  margin-bottom:1em;
-      font-size: 0.9em;
-}
-ul.w3agile_footer_grid_list li span{
-  display:block;
-  margin:1em 0 0;
-}
-ul.w3agile_footer_grid_list li span i {
-    color: #fff;
-}
-.w3agile_footer_grid_left{
-  float:left;
-  width:33.33%;
-  padding:.15em;
 }
 .agileinfo_copy_right{
  background: #101010;
@@ -916,13 +669,6 @@ ul.w3agile_footer_grid_list li span i {
 .agileinfo_copy_right_left p {
     color: #fff;
     margin-top: 10px;
-}
-.agileinfo_copy_right_left p a{
-  color: #168eea;
-  text-decoration:none;
-}
-.agileinfo_copy_right_left p a:hover{
-  color:#fff;
 }
 
 /*-- //footer --*/
@@ -955,28 +701,10 @@ div#contact h3 {
     margin-bottom: 10px;
     text-transform: uppercase;
 }
-.contact-left {
-    position: absolute;
-    padding: 3em 4em;
-    background: #ee4f4f;
-    top: 18.5em;
-    left: 8em;
-}
-.contact-left h4 {
-    color: #000;
-    font-size: 1.3em;
-}
 .contact-middle {
     border: 20px solid rgba(0, 0, 0, 0.62);
     padding: 3em 10em 3em 21em;
       margin-top: 3em;
-}
-.contact-left p {
-    text-align: left;
-    font-size: 15px;
-    margin-bottom: 17px;
-      color: #fff;
-    letter-spacing: 1px;
 }
 .contact-middle input[type="text"], .contact-middle input[type="email"], textarea {
     width: 100%;
@@ -1093,12 +821,6 @@ textarea:focus{
     left: 20%;
     text-align: center;
   }
-  .contact-left {
-    position: absolute;
-    padding: 3em 3em;
-    top: 18.5em;
-    left: 5em;
-  }
   .gallery {
     padding-bottom: 4em;
   }
@@ -1117,17 +839,8 @@ textarea:focus{
   .wthree-text {
     padding: 3em 3em;
   }
-  .w3agile_footer_grid:nth-child(3) {
-    padding-left: 1em;
-  }
 }
 @media (max-width: 1280px){
-  .contact-left {
-    position: absolute;
-    padding: 2em 2em;
-    top: 18.5em;
-    left: 2em;
-  }
   .wthree_agile_us {
     width: 82%;
     margin: 3em auto 0;
@@ -1171,10 +884,6 @@ textarea:focus{
     left: 16%;
     text-align: center;
   }
-  .w3agile_footer_grid h2 a {
-    font-size: 0.9em;
-
-  }
 }
 @media (max-width:1050px){
   .wthree-text p {
@@ -1195,10 +904,6 @@ textarea:focus{
     left: 15%;
     text-align: center;
   }
-  figure.effect-roxy figcaption {
-    padding: 4em 2em;
-    text-align: center;
-  }
 }
 @media (max-width: 991px){
   .w3l_header_left ul li {
@@ -1208,11 +913,6 @@ textarea:focus{
   }
   .w3l_header_left ul li span {
     padding-right: 0.5em;
-  }
-  .w3l_header_right ul li {
-    margin: 0px 3px;
-    width: 26px;
-    height: 26px;
   }
 
   .wthree-text p {
@@ -1246,22 +946,8 @@ textarea:focus{
     padding: 3em 2em 3em 14em;
     margin-top: 3em;
   }
-  .w3agile_footer_grid:nth-child(4) {
-    padding-left: 0em;
-  }
-  .w3agile_footer_grid {
-    margin-bottom: 2em;
-  }
   .footer {
     padding: 3em 0 2em 0;
-  }
-  .w3agile_footer_grid:nth-child(3) {
-    padding-left: 0;
-  }
-  .w3agile_footer_grid_left {
-    float: left;
-    width: 20.33%;
-    padding: .15em;
   }
   h3.agile-tittle {
     font-size: 2.1em;
@@ -1274,12 +960,6 @@ textarea:focus{
   }
   .contact-agile {
     padding-top: 2em;
-  }
-  .contact-left {
-    position: absolute;
-    padding: 1em 2em;
-    top: 31.5em;
-    left: 23em;
   }
   .gallery {
     padding-bottom:3em;
@@ -1361,12 +1041,6 @@ textarea:focus{
     margin: 0 auto 0em;
     width: 23%;
   }
-  .contact-left {
-    position: absolute;
-    padding: 1em 1em;
-    top: 31.5em;
-    left: 17em;
-  }
   .navbar-toggle {
     margin: .5em 17em 0 0;
   }
@@ -1413,12 +1087,6 @@ textarea:focus{
   .navbar-toggle {
     margin: .5em 14em 0 0;
   }
-  .contact-left {
-    position: absolute;
-    padding: 1em 0.5em;
-    top: 31.5em;
-    left: 16em;
-  }
   .wthree-text h4 {
     font-size: 1.4em;
   }
@@ -1442,32 +1110,13 @@ textarea:focus{
   .gallery {
     padding-bottom: 2em;
   }
-  .contact-left p {
-    font-size: 13px;
-    margin-bottom: 6px;
-    color: #fff;
-    letter-spacing: 1px;
-  }
-  .contact-left h4 {
-    font-size: 1em;
-  }
   textarea {
     height: 49px;
     resize: none;
     width: 100%;
   }
-  .contact-left {
-    position: absolute;
-    padding: 1em 0.5em;
-    top: 32em;
-    left: 11em;
-  }
   .contact-agile {
        min-height: 721px;
-  }
-  .w3agile_footer_grid ul li {
-    list-style-type: none;
-    margin-bottom: 0.5em;
   }
   .wthree_agile_us i {
     font-size: 2em;
@@ -1477,24 +1126,11 @@ textarea:focus{
     width: 100%;
     margin: 2em auto 0;
   }
-  .w3agile_footer_grid h2 {
-    margin: 0.5em 0 0;
-  }
   .wthree-text {
     padding: 1.5em 1em;
   }
 }
 @media (max-width: 414px){
-  .grid figure p {
-    letter-spacing: 2px;
-    font-size: 55.5%;
-  }
-  .contact-left {
-    position: absolute;
-    padding: 1em 0.5em;
-    top: 32em;
-    left: 4.4em;
-  }
    p{
     margin: 0;
     font-size: 13px;
@@ -1505,16 +1141,6 @@ textarea:focus{
   .wthree_agile_us i {
     font-size: 2em;
     line-height: 2.8em;
-  }
-  figure.effect-roxy figcaption {
-    padding: 7em 2em;
-    text-align: center;
-  }
-  .contact-left {
-    position: absolute;
-    padding: 1em 0.5em;
-    top: 32em;
-    left: 4.3em;
   }
   .w3l_header_right {
     float: none;
@@ -1537,19 +1163,6 @@ textarea:focus{
   }
   .navbar-toggle {
     margin: .5em 6em 0 0;
-  }
-  .w3agile_footer_grid {
-    margin-bottom: 1em;
-    padding: 0;
-  }
-}
-@media (max-width:375px){
-  figure.effect-roxy figcaption {
-    padding: 6em 2em;
-    text-align: center;
-  }
-  .w3agile_footer_grid h2 a {
-    font-size: 0.8em;
   }
 }
 @media (max-width:320px){
@@ -1590,10 +1203,6 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
-.price {
-  font-size: 22px;
-  color:red;
-}
 input[type='password'], textarea {
   background: #FFF;
   border: 1px solid #E7E7E7;
@@ -1650,7 +1259,7 @@ input[type='password'], textarea {
 .register {
   padding: 2em 0 3em 0;
 }
-.register-top-grid h3, .register-bottom-grid h3 {
+.register-top-grid h3 {
   color:#13c6f1;
   font-size: 1.2em;
   padding-bottom: 15px;
@@ -1743,9 +1352,6 @@ div.register-bottom-grid {
 .banner {
   min-height: 500px;
 }
-.heading h3 {
-  font-size: 1.5em;
-}
 .main-1 h1 {
   font-size: 2.2em;
 }
@@ -1758,50 +1364,19 @@ div.register-bottom-grid {
 .main-1 h1 {
   font-size: 2em;
 }
-.price {
-  font-size: 15px;
-}
 }
 /*-- responsive-mediaquries --*/
 @media(max-width:768px){
-.footer li a {
-  font-size: 0.875em;
-}
 .footer {
   padding: 2em 0;
 }
 .banner {
   min-height: 351px;
 }
-.heading h3 {
-  font-size: 1.3em;
-}
-.page-no {
-  float: right;
-  width: 34%;
-}
-.content_top {
-  padding: 10px 16px;
-}
-.button {
-  padding: 4px 8px;
-}
-.button2 {
-  padding: 4px 8px;
-}
-.button3 {
-  padding: 4px 8px;
-}
-.button4 {
-  padding: 4px 8px;
-}
-.price {
-  font-size: 13px;
-}
 input[type='password'], textarea {
   font-size: 8px;
 }
-.register-top-grid h3, .register-bottom-grid h3 {
+.register-top-grid h3 {
   font-size: 1.1em;
 }
 .register-but form input[type="submit"] {
@@ -1830,13 +1405,6 @@ input[type='password'], textarea {
 .banner {
   min-height: 323px;
 }
-.heading h3 {
-  font-size: 1.2em;
-}
-.page-no {
-  float: right;
-  width: 41%;
-}
 .main-1 h1 {
   font-size: 1.6em;
 }
@@ -1846,18 +1414,7 @@ input[type='password'], textarea {
 .banner {
   min-height: 245px;
 }
-.heading h3 {
-  font-size: 1.1em;
-}
-.page-no {
-  float: right;
-  width: 57%;
-}
-.heading {
-  float: left;
-  margin-right: 0%;
-}
-.register-top-grid h3, .register-bottom-grid h3 {
+.register-top-grid h3 {
   font-size: 1em;
 }
 .login-left h3 {
@@ -1873,14 +1430,6 @@ input[type='password'], textarea {
   background: url(../images/banner.jpg) no-repeat -593px 0px;
   min-height: 210px;
 }
-.page-no {
-  float: right;
-  width: 100%;
-  display: none;
-}
-.heading h3 {
-  font-size: 1em;
-}
 .main-1 h1 {
   font-size: 1.3em;
 }
@@ -1895,164 +1444,11 @@ div.register-bottom-grid {
   background: #ffffff;
   padding: 0.5em 0;
 }
-p.title a {
-  font-size: 1.1em;
-}
-}
-.page-no {
-  float: right;
-  width: 21%;
-}
-.page-no p {
-  float: left;
-  font-size: 0.8125em;
-  padding: 0.3em 0;
-  color: #2A3946; 
-}
-.page-no ul {
-  display: inline;
-}
-.page-no ul li {
-  float: left;
-  display: inline-block;
-}
-.page-no li a {
-  font-size: 0.8125em;
-  color:#2A3946;
-  line-height: 1.6em;
-  padding: 5px 5px;
-}
-.page-no li a:hover{
-  color:#fff;
 }
 /*-- GRID OF FOUR -- */
-.col_1_of_4{
-  display: block;
-  float:left;
-  margin: 1% 0 1% 1.6%;
-  background: #313131;
-  box-shadow: inset 0 0 150px rgba(0, 0, 0, 0.7);
-}
-.col_1_of_4:first-child { margin-left: 0; } 
-  
-.span_1_of_4 {
-  width: 23.8%;
-  padding: 1.5%;
-}
-.span_1_of_4  p {
-  font-size:0.8125em;
-  padding:0.5em 0;
-  color: #333;
-  line-height: 1.5em;
-}
 /***** Media Quries *****/
 /*  GO FULL WIDTH AT LESS THAN 640 PIXELS */
-@media only screen and (max-width: 640px) and (min-width: 480px) {
-  .col_1_of_4{ 
-    margin: 1% 0 1% 0%;
-  }
-  .span_1_of_4 {
-  width: 50%;
-  padding: 3%;
-}
-}
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
-@media only screen and (max-width: 480px) {
-  .col_1_of_4{ 
-    margin: 1% 0 1% 0%;
-  }
-  .span_1_of_4 {
-  width: 50%;
-  padding: 4%;
-}
-}
-p.title a {
-  font-size: 1.4em;
-  color: #999;
-  line-height: 1.5em;
-  text-decoration:none;
-}
-p.title a:hover{
-  color:#13c6f1;
-}
-.price {
-  margin-bottom: 5%;
-  font-size: 15px;
-}
-span.actual{
-  color:#999;
-}
-.button{
-  font-size:.8em;
-  padding:7px 15px;
-  background:#49BB52;
-  color: #FFF;
-  border: none;
-  text-decoration: none;
-  outline: 0;
-  cursor: pointer;
-  -webkit-transition: .2s all linear;
-    -moz-transition: .2s all linear;
-    -o-transition: .2s all linear;
-    transition: .2s all linear;
-}
-.button:hover{
-  background:#000;
-}
-.button2{
-  font-size:.8em;
-  padding:7px 15px;
-  background:#C71CC7;
-  color: #FFF;
-  border: none;
-  text-decoration: none;  
-  outline: 0;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
--moz-transition: all 0.5s ease-in-out;
--o-transition: all 0.5s ease-in-out;
-transition: all 0.5s ease-in-out;
-}
-.button2:hover{
-  background:#000;
-}
-.button3{
-  font-size:.8em;
-  padding:7px 15px;
-  background:#2E52E2;
-  color: #FFF;
-  border: none;
-  text-decoration: none;  
-  outline: 0;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
--moz-transition: all 0.5s ease-in-out;
--o-transition: all 0.5s ease-in-out;
-transition: all 0.5s ease-in-out;
-}
-.button3:hover{
-  background:#000;
-}
-.button4{
-  font-size:.8em;
-  padding:7px 15px;
-  background:#E28C2E;
-  color: #FFF;
-  border: none;
-  text-decoration: none;  
-  outline: 0;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
--moz-transition: all 0.5s ease-in-out;
--o-transition: all 0.5s ease-in-out;
-transition: all 0.5s ease-in-out;
-}
-.button4:hover{
-  background:#000;
-}
-.cart{
-  text-align:center;
-}
 /*--image-effect--*/
 .view {
    width:100%;
@@ -2067,78 +1463,10 @@ transition: all 0.5s ease-in-out;
    display: block;
    position: relative;
 }
-.effect img {
-   opacity:1;
-   -moz-transform:scale(1,1);
-   -webkit-transform:scale(1,1);
-   -o-transform:scale(1,1);
-   -ms-transform:scale(1,1);
-   transform:scale(1,1);
-   -webkit-transition: all 0.2s ease-in;
-   -moz-transition: all 0.2s ease-in;
-   -o-transition: all 0.2s ease-in;
-   -ms-transition: all 0.2s ease-in;
-   transition: all 0.2s ease-in;
-}
-.effect:hover img {
-   -moz-transform:scale(2,2);
-   -webkit-transform:scale(2,2);
-   -o-transform:scale(2,2);
-   -ms-transform:scale(2,2);
-   transform:scale(2,2);
-}
 
 /*tabela*/
-   .custab{
-   border: 1px solid #ccc;
-   padding: 5px;
-   margin: 5% 0;
-   box-shadow: 3px 3px 2px #ccc;
-   transition: 0.5s;
-   }
-   .custab:hover{
-   box-shadow: 3px 3px 0px transparent;
-   transition: 0.5s;
-}
 
 /*upload*/
-
-.progress-outer{
-    background: #fff;
-    margin-top: 10px;
-    border-radius: 50px;
-    padding: 15px;
-    margin-top: 10px;
-    box-shadow: 0 0  10px rgba(209, 219, 231,0.7);
-}
-.progress{
-    height: 27px;
-    overflow: visible;
-    border-radius: 50px;
-    background: #eaedf3;
-    box-shadow: inset 0 10px  10px rgba(244, 245, 250,0.9);
-}
-.progress .progress-bar{
-    border-radius: 50px;
-}
-.progress .progress-value{
-    position: relative;
-    left: -45px;
-    top: 4px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #fff;
-    letter-spacing: 2px;
-}
-.progress-bar.active{
-    animation: reverse progress-bar-stripes 0.40s linear infinite, animate-positive 2s;
-}
-@-webkit-keyframes animate-positive{
-    0% { width: 0%; }
-}
-@keyframes animate-positive {
-    0% { width: 0%; }
-}
 
 
 
